# cmake_git_hash

./: CMakeLists.txt  README.md  build_info.h.in  main.cpp
cmake/: GitHash.cmake
